Adding Login and Sign up to Home Page

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 
 					<ul>
 
-						<li><a href="#0">My Account</a></li>
-						<li><a href="#0">Edit Account</a></li>
-						<li><a href="#0">Logout</a></li>
+						<li><a href="#0">Login</a></li>
+						<li><a href="#0">Sign Up</a></li>
+				
 					</ul>
 				</li>
 			</ul>
