--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
 					<ul>
 
-						<li><a href="#0">Login</a></li>
-						<li><a href="#0">Sign Up</a></li>
+						<li><a href="Sign-in-form.html">Login</a></li>
+						<li><a href="sign-up-page.html">Sign Up</a></li>
 				
 					</ul>
 				</li>
