--- a/sign-up-page.html
+++ b/sign-up-page.html
@@ -8,21 +8,23 @@
     <!--CSS-->
     <link rel="stylesheet" href="css/style.css">
     <!--TITLE-->
-    <title>Sign In - ANON.</title>
+    <title>Sign Up - ANON.</title>
 </head>
 <body>
     
-    <div class="loginbox">
-       <h1 id = "LoginHeader">Login Here</h1>
+    <div class="signupbox">
+       <h1 id = "SignupHeader">Sign Up Here</h1>
        <form action="">
-           <p class="LoginText">Username</p>
+           <p class="signupText">Username</p>
            <input type="text" name="" placeholder="Enter Username">
 
-           <p class="LoginText">Password</p>
+           <p class="signupText">Password</p>
            <input type="text" name="" placeholder="Enter Password">
 
-           <input type="submit" name="" value="Login">
-           <a href="sign-up-page.html">Dont have an account?</a>
+           <p class="signupText">Confirm Pasword</p>
+           <input type="text" name="" placeholder="Confirm Password">
+
+           <input type="submit" name="" value="Sign Up">
        </form> 
     </div>
 
