--- a/sign-up-page.html
+++ b/sign-up-page.html
@@ -22,7 +22,7 @@
            <input type="text" name="" placeholder="Enter Password">
 
            <p class="signupText">Confirm Pasword</p>
-           <input type="text" name="" placeholder="Confirm Password">
+           <input type="text" name="" placeholder="Enter Password">
 
            <input type="submit" name="" value="Sign Up">
        </form> 
