--- a/public/post_page.html
+++ b/public/post_page.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
 	<script src="js/modernizr.js"></script> <!-- Modernizr -->
   	<!--Title-->
-	<title>Anon.</title>
+	<title>Popular - Anon.</title>
 </head>
 <body>
 	<header class="cd-main-header">
@@ -38,9 +38,9 @@
 
 					<ul>
 
-						<li><a href="Sign-in-form.html">Login</a></li>
-						<li><a href="sign-up-page.html">Sign Up</a></li>
-				
+						<li><a href="#0">My Account</a></li>
+						<li><a href="#0">Edit Account</a></li>
+						<li><a href="#0">Logout</a></li>
 					</ul>
 				</li>
 			</ul>
@@ -49,10 +49,6 @@
 
 	<main class="cd-main-content">
 		<nav class="cd-side-nav">
-			<ul>
-				<li class="cd-label">Action</li>
-				<li class="action-btn"><a href="addpost.html">Post Something!</a></li>
-			</ul>
 			<ul>
 				<li class="cd-label">Main</li>
 				<li class="has-children overview">
@@ -116,13 +112,26 @@
 				</li>
 			</ul>
 
-			
+			<ul>
+				<li class="cd-label">Action</li>
+				<li class="action-btn"><a href="#0">+ Button</a></li>
+			</ul>
 		</nav>
 
 		<div class="content-wrapper">
-					<h1>ANON.</h1>
-					<h2>Most Viewed</h2>
-	
+			<h1>ANON.</h1>
+			<center>
+			<div class="card">
+					<div class="card-header">
+					  Important
+					</div>
+					<div class="card-body">
+					  <h5 class="card-title">Watch Out!</h5>
+					  <p class="card-text">This site may contain some sensitive conent.</p>
+					  <a href="index.html" class="btn btn-primary">Go to site.</a>
+					</div>
+				  </div>
+			</center>
 		</div> <!-- .content-wrapper -->
 
 	</main> <!-- .cd-main-content -->
