adding layout to post_page (beginning)

--- a/public/index.html
+++ b/public/index.html
@@ -59,9 +59,9 @@
 					<a href="#0">Overview</a>
 					
 					<ul>
-						<li><a href="#0">All Data</a></li>
-						<li><a href="#0">Category 1</a></li>
-						<li><a href="#0">Category 2</a></li>
+						<li><a href="post_page.html">Popular</a></li>
+						<li><a href="#0">Most Viewed</a></li>
+						<li><a href="#0">idk yet</a></li>
 					</ul>
 				</li>
 				<li class="has-children notifications active">
