Updating Post Page
close to completion but not yet

--- a/public/welcome-page.html
+++ b/public/welcome-page.html
@@ -120,6 +120,7 @@
 
 		<div class="content-wrapper">
 			<h1>ANON.</h1>
+			<div class="WATCH-OUT-card">
 			<center>
 			<div class="card">
 					<div class="card-header">
@@ -132,6 +133,7 @@
 					</div>
 				  </div>
 			</center>
+			</
 		</div> <!-- .content-wrapper -->
 
 	</main> <!-- .cd-main-content -->
