--- a/public/welcome-page.html
+++ b/public/welcome-page.html
@@ -128,7 +128,7 @@
 					</div>
 					<div class="card-body">
 					  <h5 class="card-title">Watch Out!</h5>
-					  <p class="card-text">This site may contain some sensitive conent.</p>
+					  <p class="card-text">This site contains some sensitive conent.</p>
 					  <a href="index.html" class="btn btn-primary">Go to site.</a>
 					</div>
 				  </div>
